--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "gulp serve"
   },
-  "author": "",
+  "author": "Subrata Mal",
   "license": "ISC",
   "private": true,
   "devDependencies": {
